<resources>
    <string name="app_name">Github App</string>
    <string name="oh_no">Oh no… Something went wrong.</string>
    <string name="book_now">Book now</string>
    <string name="cancel">Cancel</string>
    <string name="login">Log in</string>
    <string name="email">email</string>
    <string name="submit">Submit</string>
    <string name="invalid_email">Invalid email</string>
    <string name="tripBooked">%1$d trip(s) has(have) been booked 🚀🚀</string>
    <string name="tripCancelled">A trip has been cancelled</string>
    <string name="subscriptionError">Oops, something wrong happened</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_all"> <u> View All </u>.</string>
    <string name="profile"> Profile</string>
    <string name="profile_name"> Sian Taylor</string>
    <string name="short_name"> setaylor</string>
    <string name="email_text"> <b>s.e.taylor@gamil.com</b></string>
    <string name="pinned"> Pinned</string>
    <string name="top"> Top Repositories</string>
    <string name="starred"> Starred Repositories</string>
</resources>
