<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.githubapp.MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/fab_margin">

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:id="@+id/txt_view_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <ImageView
        android:background="@drawable/circle_background"
        android:id="@+id/image_view_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_view_title"
        app:layout_constraintBottom_toTopOf="@+id/txt_view_email"
        />

    <TextView
        android:textStyle="bold"
        android:layout_marginStart="@dimen/fab_margin"
        android:id="@+id/txt_view_name"
        android:text="@string/profile_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/image_view_profile"
        app:layout_constraintTop_toBottomOf="@+id/txt_view_title"
        app:layout_constraintBottom_toTopOf="@+id/txt_view_email"/>

    <TextView
        android:layout_marginStart="@dimen/fab_margin"
        android:id="@+id/txt_view_profile_name"
        android:text="@string/short_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/image_view_profile"
        app:layout_constraintTop_toBottomOf="@+id/txt_view_name"
        />

    <TextView
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_view_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_profile"/>

    <TextView
        android:layout_marginTop="@dimen/fab_margin"
        android:text="0 followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_view_followers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_view_email"/>

    <TextView
        android:layout_marginTop="@dimen/fab_margin"
        android:text="0 following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_view_following"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_view_email"/>

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/pinned"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_view_pinned_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_view_following"/>

    <TextView
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/view_all"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_view_view_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_view_followers"/>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recycle_view_pinned_items"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_view_pinned_title"
        tools:itemCount="3"/>

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/top"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_view_top_repo_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycle_view_pinned_items"/>

    <TextView
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/view_all"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_view_top_repo_view_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycle_view_pinned_items"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recycle_view_top_repo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_view_top_repo_title"
        android:orientation="horizontal">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/starred"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_view_starred_repo_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycle_view_top_repo"/>

    <TextView
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/view_all"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_view_starred_view_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycle_view_top_repo"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recycle_view_starred_repo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_view_starred_repo_title"
        android:orientation="horizontal">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>